--- a/css/style.css
+++ b/css/style.css
@@ -630,6 +630,8 @@ body.dark-theme{
     max-width: 100rem;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 20px;
+
   }
 
   .blog-content{
