--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@
     box-sizing: border-box;
 }
 
+p {
+  text-align: justify;
+}
 html{
     font-size: 62.5%;
 }
@@ -655,6 +658,7 @@ body.dark-theme{
   }
   .blog-post-title{
     margin-top: 5rem;
+    text-align: center;
   }
 
 .blog-rcnt{
@@ -712,6 +716,11 @@ body.dark-theme{
   place-items: center;
 }
 
+
+
+.center{ 
+  text-align: center;
+}
 
 @media screen and (max-width: 1000px) {
   .menu{
