--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* change the font here */
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /* change the colors here */
 :root{
     --text-color: rgba(0,0,0);
@@ -12,7 +12,7 @@
     --transparent-text-color: rgba(174,174,178);
     --transparent-dark-color: rgba(0,0,0);
     --transparent-fill: rgba(255,255,255,0.75);
-    --font-family: 'EB Garamond', sans-serif;
+    --font-family: 'Roboto';
     --font-size-xsm: 1.2rem;
     --font-size-sm: 1.5rem;
     --font-size-md: 2rem;
@@ -26,6 +26,77 @@
     --menu-background-color: rgba(235,235,235);
 }
 
+.roboto-thin {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.roboto-light {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.roboto-regular {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto-medium {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.roboto-bold {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.roboto-black {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.roboto-thin-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.roboto-light-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.roboto-regular-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.roboto-medium-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.roboto-bold-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.roboto-black-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
 
 
 .list {
@@ -61,8 +132,12 @@
     box-sizing: border-box;
 }
 
+h4 {
+  font-size: 2.5rem;
+}
+
 p {
-  text-align: justify;
+  text-align: left;
 }
 html{
     font-size: 62.5%;
