--- a/css/style.css
+++ b/css/style.css
@@ -143,14 +143,14 @@ p {
 span {
   text-align: left;
   font-family: 'Roboto', sans-serif;
-  font-weight: 100;
+  font-weight: 200;
   font-style: normal;
 }
 
 em {
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  font-weight: 100; 
+  font-weight: 200; 
 
 }
 
@@ -782,6 +782,8 @@ body.dark-theme{
   top: 15rem;
   color: var(--text-color);
   text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
   font-size: var(--font-size-xl);
 }
 
